--- a/app/src/main/res/layout/cat_item.xml
+++ b/app/src/main/res/layout/cat_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
+    android:id="@+id/relativelayout"
     android:background="@drawable/pinkrect"
     android:layout_margin="5dp">
 
@@ -9,6 +10,17 @@
         android:id="@+id/titleTV"
         style="@style/CLW"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:text="Casual"/>
+
+    <TextView
+        android:id="@+id/childCatTV"
+        style="@style/CLSW"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+       />
 </RelativeLayout>
