--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,19 @@
         android:layout_alignParentLeft="true"
         android:layout_margin="10dp"/>
 
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="50dp"
+        android:layout_centerInParent="true"
+        android:minWidth="50dp" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/categoryRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/shopbycatTV"
+        android:visibility="gone"
         ></android.support.v7.widget.RecyclerView>
 </RelativeLayout>
