--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -12,9 +12,24 @@
         <item name="android:textSize">22sp</item>
         <item name="android:gravity">center</item>
     </style>
-    <style name="CSW">
+    <style name="CMW">
         <item name="android:textAppearance">?android:textAppearanceMedium</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:gravity">center</item>
+    </style>
+    <style name="CLMW">
+        <item name="android:textAppearance">?android:textAppearanceMedium</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:gravity">center|left</item>
+    </style>
+    <style name="CLSB">
+        <item name="android:textAppearance">?android:textAppearanceSmall</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:gravity">center|left</item>
+    </style>
+    <style name="CLSW">
+        <item name="android:textAppearance">?android:textAppearanceSmall</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:gravity">center|left</item>
     </style>
 </resources>
